--- a/package.json
+++ b/package.json
@@ -42,8 +42,11 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "heroicons": "^2.1.4",
+    "js-cookie": "^3.0.5",
     "lucide-react": "^0.400.0",
     "next": "^14.2.4",
+    "react-hook-form": "^7.52.1",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.24.0",
     "react-tooltip": "^5.27.0",
